--- a/machine-learning/project/latex/report/references.bib
+++ b/machine-learning/project/latex/report/references.bib
@@ -1,24 +1,34 @@
-@article {flower081,
-    title = {Vaccines: Their Place in History},
-    author = {Flower, Darren R},
-    pages = {1--54},
-    journal = {Bioinformatics for Vaccinology},
-    year = {2008},
-}
-
-@article{robinson12,
-    author = {Robinson, James and Halliwell, Jason A. and McWilliam, Hamish and Lopez, Rodrigo and Parham, Peter and Marsh, Steven G. E.}, 
-    title = {The IMGT/HLA database},
-    year = {2012}, 
-    doi = {10.1093/nar/gks949}, 
-    journal = {Nucleic Acids Research} 
-}
-
-@article {janeway01,
-    title = {Antigen Recognition by B-cell and T-cell Receptors},
-    author = {Janeway, C A and Travers, P and Walport, M and Capra, J D},
-    journal = {Immunobiology: The Immune System in Health and Disease},
+@article{jenkins01,
+    author = {Jenkins, Marc K. and Khoruts, Alexander and Ingulli, Elizabeth and Mueller, Daniel L. and McSorley, Stephen J. and Reinhardt, R. Lee and Itano, Andrea and Pape, Kathryn A.},
+    title = {In vivo activation of antigen-specific CD4 T Cells},
+    journal = {Annual Review of Immunology},
+    volume = {19},
+    number = {1},
+    pages = {23-45},
     year = {2001},
+}
+
+@article{rudolph06,
+    author = {Rudolph, MG and Stanfield, RL and Wilson, IA},
+    title = {How TCRs bind MHCs, peptides, and coreceptors},
+    journal = {Annual Review of Immunology},
+    volume = {24},
+    number = {1},
+    pages = {419-466},
+    year = {2006},
+}
+
+@article{jones06,
+    author = {Jones, E. Yvonne and Fugger, Lars and Strominger, Jack L. and Siebold, Christian},
+    journal = {Nat Rev Immunol},
+    month = apr,
+    number = {4},
+    pages = {271--282},
+    publisher = {Nature Publishing Group},
+    title = {MHC class II proteins and disease: a structural perspective},
+    url = {http://dx.doi.org/10.1038/nri1805},
+    volume = {6},
+    year = {2006}
 }
 
 @article{gulukota00,
@@ -91,3 +101,33 @@
     JOURNAL = "PLoS Computational Biology",
     YEAR = {2008},
 }
+
+@article{elidan08,
+    author    = {Gal Elidan and Benjamin Packer and Geremy Heitz and Daphne Koller},
+    title     = {Convex Point Estimation using Undirected Bayesian Transfer Hierarchies},
+    journal   = {CoRR},
+    volume    = {abs/1206.3252},
+    year      = {2008},
+    ee        = {http://arxiv.org/abs/1206.3252},
+    bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@article{friedman09,
+  author =  "Jerome H. Friedman and Trevor Hastie and Rob Tibshirani",
+  title =   "Regularization Paths for Generalized Linear Models via Coordinate Descent",
+  journal = "Journal of Statistical Software",
+  volume =  "33",
+  number =  "1",
+  pages =   "1--22",
+  day =     "2",
+  month =   "2",
+  year =    "2010",
+  CODEN =   "JSSOBK",
+  ISSN =    "1548-7660",
+  bibdate = "2009-12-15",
+  accepted =    "2009-12-15",
+  acknowledgement = "",
+  keywords =    "",
+  submitted =   "2009-04-22",
+}
+
