--- a/machine-learning/project/latex/report/references.bib
+++ b/machine-learning/project/latex/report/references.bib
@@ -26,7 +26,6 @@
     pages = {271--282},
     publisher = {Nature Publishing Group},
     title = {MHC class II proteins and disease: a structural perspective},
-    url = {http://dx.doi.org/10.1038/nri1805},
     volume = {6},
     year = {2006}
 }
@@ -131,3 +130,17 @@
   submitted =   "2009-04-22",
 }
 
+@misc{wangData08,
+    author = {Peng Wang and John Sidney and Courtney Dow and Bianca Mothé and Alessandro Sette and Björn Peters},
+    title = {MHC Class II Peptide Data},
+    howpublished ="\url{http://mhcbindingpredictions.immuneepitope.org/MHCII/}",
+    year = {2008},
+    note ={Online},
+}
+
+@ARTICLE{qian88,
+    author = {Ning Qian and Terrence J. Sejnowski},
+    title = {Predicting the secondary structure of globular proteins using neural networks models},
+    journal = {J. Molecular Biology},
+    year = {1988}
+}
