--- a/machine-learning/project/latex/report/hwdefs.tex
+++ b/machine-learning/project/latex/report/hwdefs.tex
@@ -1,5 +1,7 @@
-\newcommand{\BEAS}{\begin{eqnarray*}}
-\newcommand{\EEAS}{\end{eqnarray*}}
+%\newcommand{\BEAS}{\begin{eqnarray*}}
+%\newcommand{\EEAS}{\end{eqnarray*}}
+\newcommand{\BEAS}{\begin{align}}
+\newcommand{\EEAS}{\end{align}}
 \newcommand{\BEQ}{\begin{equation}}
 \newcommand{\EEQ}{\end{equation}}
 \newcommand{\BIT}{\begin{itemize}}
@@ -122,14 +124,15 @@
 
 \newcounter{HW}
 
-\usepackage{amsthm}
-\usepackage{graphicx}
-\usepackage{natbib}
-\usepackage{algorithm}
-\usepackage{algorithmic}
-\usepackage{amsmath}
-\usepackage{hyperref}
-\usepackage{tikz}
+% clashes with packages in final_report.tex, disable as for now
+%\usepackage{amsthm}
+%\usepackage{graphicx}
+%\usepackage{natbib}
+%\usepackage{algorithm}
+%\usepackage{algorithmic}
+%\usepackage{amsmath}
+%\usepackage{hyperref}
+%\usepackage{tikz}
 
 
 \newtheorem{remark}{Remark}
@@ -139,4 +142,3 @@
 \newtheorem{assumption}{Assumption}
 \newtheorem{corollary}{Corollary}
 \newtheorem{theorem}{Theorem}
-
